--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Chelsea Lugay
 email: chelsealugay@gmail.com
 description: Create Caribbean RTC Internship Portfolio Page
 baseurl: "Chelseal" # the subpath of your site, e.g. /blog
-url: "https://Chelsealugay.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://chelsealugay.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
